# postgirl

./: .eslintrc.cjs  .gitignore  CLAUDE_COMMANDS.md  DEBUG.md  LICENSE  README.md  TAB_EXPANSION_FIX_SUMMARY.md  UI_TEST_VERIFICATION.md  demo.jsx  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.devcontainer/: devcontainer.json  setup.sh
docx/: 00-requiments.md  01-MASTER_PLAN.md  02-TECH_STACK.md  03-CODEBASE_GUIDE.md  04-CRITICAL_KNOWLEDGE.md  05-DETAILED_ROADMAP.md  06-CURRENT_STATE.md  07-ACTIVE_TASKS.md  08-LAYOUT_SYSTEM.md  README.md  SETUP_GUIDE.md  copilot-instructions.md
playwright-report/: index.html
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_create_workspaces.sql  002_create_collections.sql  003_create_environments.sql  004_branch_history.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: collection.rs  environment.rs  git.rs  git_branch_commands.rs  http.rs  mod.rs  workspace.rs
src-tauri/src/models/: collection.rs  environment.rs  git.rs  http.rs  mod.rs  workspace.rs
src-tauri/src/services/: collection_service.rs  credential_service.rs  database_service.rs  environment_service.rs  file_sync_service.rs  git_branch_service.rs  git_service.rs  http_service.rs  mod.rs  simple_database_service.rs
src-tauri/src/tests/: collection_tests.rs  database_tests.rs  environment_tests.rs  environment_tests_fixed.rs  environment_tests_old.rs  git_tests.rs  http_tests.rs  mod.rs  simple_unit_tests.rs  workspace_tests.rs
(+92 files in other folders)
